# solana-rust-vanity-generator

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  gen-address.sh  run.sh  run_cli.sh  run_server.sh  run_tui.sh  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/profile/: README.md
.github/workflows/: rust.yml
examples/: client.js  client.py
src/: generator.rs  main.rs
