[package]
name = "solana-vanity-generator"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust service for generating vanity Solana wallet addresses with custom prefixes or suffixes"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/ohbanned/solana-vanity-generator"
readme = "README.md"
keywords = ["solana", "blockchain", "cryptocurrency", "vanity-address", "wallet"]
categories = ["cryptography", "web-programming"]
default-run = "solana-vanity-generator"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.16.0"
bs58 = "0.5.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
dashmap = "5.5.0"
rayon = "1.7"
num_cpus = "1.16.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33" # CLI argument parsing
reqwest = { version = "0.11", features = ["json"] } # HTTP client
indicatif = "0.17.7" # Progress bars and spinners
cursive = "0.20" # TUI library for interactive terminal UI
crossterm = "0.27" # Terminal control library
colored = "3.0.0"

[[bin]]
name = "solana-vanity-generator"
path = "src/main.rs"

[[bin]]
name = "vanity"
path = "src/bin/vanity.rs"

[[bin]]
name = "vanity-tui"
path = "src/bin/vanity_tui.rs"
